new stations, new bbc urls

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,7 +29,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="BBC Two"
+        android:text="BBC Three (Classic)"
         android:textColor="@color/black"
         app:backgroundTint="@color/darkgreen"
         app:cornerRadius="8dp"
@@ -43,7 +43,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="BBC Three"
+        android:text="BBC Four (Talk)"
         android:textColor="@color/black"
         app:backgroundTint="@color/darkgreen"
         app:cornerRadius="8dp"
@@ -57,7 +57,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="BBC Four"
+        android:text="Klasszik"
         android:textColor="@color/black"
         app:backgroundTint="@color/darkgreen"
         app:cornerRadius="8dp"
@@ -71,7 +71,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="RNE Clásica"
+        android:text="Momo zene"
         android:textColor="@color/black"
         app:backgroundTint="@color/darkgreen"
         app:cornerRadius="8dp"
@@ -85,7 +85,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="RNE 1"
+        android:text="Momo mese"
         android:textColor="@color/black"
         app:backgroundTint="@color/darkgreen"
         app:cornerRadius="8dp"
@@ -99,7 +99,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Klasszik Rádió"
+        android:text="Kikapcs"
         android:textColor="@color/black"
         app:backgroundTint="@color/darkgreen"
         app:cornerRadius="8dp"
@@ -113,7 +113,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Kikapcs"
+        android:text="Restart"
         android:textColor="@color/black"
         app:backgroundTint="@color/darkgreen"
         app:cornerRadius="8dp"
