--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -71,7 +71,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Polskie Radio Dziecom"
+        android:text="Polskie Radio Dzieciom"
         android:textColor="@color/black"
         app:backgroundTint="@color/darkgreen"
         app:cornerRadius="8dp"
@@ -85,7 +85,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Momo mese"
+        android:text="Momo zene"
         android:textColor="@color/black"
         app:backgroundTint="@color/darkgreen"
         app:cornerRadius="8dp"
@@ -99,7 +99,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Kikapcs"
+        android:text="Momo mese"
         android:textColor="@color/black"
         app:backgroundTint="@color/darkgreen"
         app:cornerRadius="8dp"
@@ -113,12 +113,26 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Restart"
+        android:text="Kikapcs"
         android:textColor="@color/black"
         app:backgroundTint="@color/darkgreen"
         app:cornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button6" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button8"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Restart"
+        android:textColor="@color/black"
+        app:backgroundTint="@color/darkgreen"
+        app:cornerRadius="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
